# api-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20241204140635_create_users.up.sql
src/: custom_error.rs  db.rs  handlers.rs  main.rs  models.rs
tests/: health_check.rs
