[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenvy = "0.15"
dotenv = "0.15.0"
sqlx = { version = "0.8.2", features = ["runtime-async-std", "postgres", "uuid", "chrono"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.16.0"
log = "0.4.22"
env_logger = "0.11.4"